--- a/PSS/PSS/Views/Shared/_Layout.cshtml
+++ b/PSS/PSS/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         <li>@Html.ActionLink("Produtos", "Index", "Products")</li>
                         <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
                         <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
+                        <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
                     </ul>
                 }
 
