--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -34,9 +34,9 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
-                @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
-                @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
+                @Html.ActionLink(View.Edit, "Edit", new { id = item.Product.Id }) |
+                @Html.ActionLink(View.Details, "Details", new { id = item.Product.Id }) |
+                @Html.ActionLink(View.Delete, "Delete", new { id = item.Product.Id })
             </td>
         </tr>
     }
