--- a/PSS/PSS/Views/Units/Delete.cshtml
+++ b/PSS/PSS/Views/Units/Delete.cshtml
@@ -1,14 +1,15 @@
 ﻿@model PSS.Models.Unit
+@using PSS.Utils.Constants
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = View.Delete;
 }
 
-<h2>Delete</h2>
+<h2>@View.Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@View.ConfirmDelete</h3>
 <div>
-    <h4>Unit</h4>
+    <h4>@Html.DisplayNameForModel()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,12 +22,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="@View.Delete" class="btn btn-default" /> |
+            @Html.ActionLink(View.BackToList, "Index")
         </div>
     }
 </div>
