--- a/PSS/PSS/Views/Units/Details.cshtml
+++ b/PSS/PSS/Views/Units/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model PSS.Models.Unit
+@using PSS.Utils.Constants
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = View.Details;
 }
 
-<h2>Details</h2>
+<h2>@View.Details</h2>
 
 <div>
-    <h4>Unit</h4>
+    <h4>@Html.DisplayNameForModel()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,7 +22,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-    
+    @Html.ActionLink(View.Delete, "Edit", new { id = Model.Id }) |
+    @Html.ActionLink(View.BackToList, "Index")
+
 </p>
