--- a/PSS/PSS/Views/Units/Edit.cshtml
+++ b/PSS/PSS/Views/Units/Edit.cshtml
@@ -1,18 +1,19 @@
 ﻿@model PSS.Models.Unit
+@using PSS.Utils.Constants
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = View.Edit;
 }
 
-<h2>Edit</h2>
+<h2>@View.Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Unit</h4>
+        <h4>@Html.DisplayNameForModel()</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,14 +26,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="@View.Edit" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(View.BackToList, "Index")
 </div>
 
 @section Scripts {
