--- a/PSS/PSS/Views/Products/Index.cshtml
+++ b/PSS/PSS/Views/Products/Index.cshtml
@@ -64,10 +64,8 @@
         <td>
             @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
             @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
-            @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
-        </td>
-        <td>
-            @Html.ActionLink("Adicionar ao carrinho", "AddToCart", "Cart", new Item { ProductId = item.Id, Quantity = 1, IsActive = true }, null) 
+            @Html.ActionLink(View.Delete, "Delete", new { id = item.Id }) |
+            @Html.ActionLink(View.AddToCart, "AddToCart", "Cart", new Item { ProductId = item.Id, Quantity = 1, IsActive = true }, null)
         </td>
     </tr>
     }
