--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PSS.Models.PurchaseOrder
 @using PSS.Utils.Constants
+@using PSS.Models
 
 @{
     ViewBag.Title = View.Create;
@@ -23,25 +24,45 @@
                 <table class="table">
                     <tr>
                         <th>
+                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Id)
+                        </th>
+
+                        <th>
                             @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.ShortDescription)
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.FullDescription)
-                        </th>
+
                         <th>
                             @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Quantity)
                         </th>
+
                         <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Stock)
+                            @Html.DisplayFor(model => Model.Items.FirstOrDefault().TotalPurchasePrice)
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Category)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Unit)
-                        </th>
-                        <th></th>
                     </tr>
+
+                    @if (Session["Cart"] != null)
+                    {
+                        foreach (var item in ((Cart)Session["Cart"]).Items)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Product.Id)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Product.ShortDescription)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Quantity)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TotalPurchasePrice)
+                                </td>
+                            </tr>
+                        }
+                    }
                 </table>
             </div>
         </div>
