--- a/PSS/PSS/Views/Categories/Create.cshtml
+++ b/PSS/PSS/Views/Categories/Create.cshtml
@@ -8,19 +8,30 @@
 <h2>@View.Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>@Html.DisplayNameForModel()</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Perishable, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Perishable)
+                    @Html.ValidationMessageFor(model => model.Perishable, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
