--- a/PSS/PSS/Views/Categories/Delete.cshtml
+++ b/PSS/PSS/Views/Categories/Delete.cshtml
@@ -20,6 +20,14 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Perishable)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Perishable)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm())
