--- a/PSS/PSS/Views/Categories/Index.cshtml
+++ b/PSS/PSS/Views/Categories/Index.cshtml
@@ -15,6 +15,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Perishable)
+        </th>
         <th></th>
     </tr>
 
@@ -23,6 +26,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Perishable)
             </td>
             <td>
                 @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
