--- a/PSS/PSS/Views/Cart/Edit.cshtml
+++ b/PSS/PSS/Views/Cart/Edit.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Product.Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Product.Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Product.Id, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Product.Id, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Product.ShortDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Product.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Product.ShortDescription, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Product.ShortDescription, "", new { @class = "text-danger" })
             </div>
         </div>
