--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -7,6 +7,10 @@
 
 <h2>@View.Index</h2>
 
+<p>
+    @Html.ActionLink("Finalizar pedido", "Create", "PurchaseOrders")
+</p>
+
 <table class="table">
     <tr>
         <th>
