--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -37,7 +37,7 @@
                         </th>
 
                         <th>
-                            @Html.DisplayFor(model => Model.Items.FirstOrDefault().TotalPurchasePrice)
+                            @Html.DisplayFor(model => Model.Items.FirstOrDefault().Product.Price)
                         </th>
                     </tr>
 
@@ -57,7 +57,7 @@
                             </td>
 
                             <td>
-                                @Html.DisplayFor(modelItem => item.TotalPurchasePrice)
+                                @Html.DisplayFor(modelItem => item.Product.Price)
                             </td>
                         </tr>
                     }
@@ -65,49 +65,11 @@
             </div>
         </div>
 
-        <div class="panel panel-default">
-            <div class="panel-heading">@Html.DisplayNameFor(model => model.Freights)</div>
-            <div class="panel-body">
-                <table class="table">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Freights.FirstOrDefault().Value)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Freights.FirstOrDefault().DeliveryDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Freights.FirstOrDefault().FreightType)
-                        </th>
-                        <th></th>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">@Html.DisplayNameFor(model => model.Installments)</div>
-            <div class="panel-body">
-                <table class="table">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Installments.FirstOrDefault().Value)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Installments.FirstOrDefault().PaymentType)
-                        </th>
-                        <th></th>
-                    </tr>
-                </table>
-
-            </div>
-        </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.TotalValue, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalValue, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TotalValue, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
             </div>
         </div>
 
