--- a/PSS/PSS/Views/PurchaseOrders/Index.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Index.cshtml
@@ -19,7 +19,7 @@
             @Html.DisplayNameFor(model => model.User.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TotalValue)
+            @Html.DisplayNameFor(model => model.TotalPrice)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Date)
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.User.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TotalValue)
+                @Html.DisplayFor(modelItem => item.TotalPrice)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
