--- a/PSS/PSS/Views/Cart/Delete.cshtml
+++ b/PSS/PSS/Views/Cart/Delete.cshtml
@@ -21,11 +21,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Product.ShortDescription)
+            @Html.DisplayNameFor(model => model.Product.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Product.ShortDescription)
+            @Html.DisplayFor(model => model.Product.Description)
         </dd>
 
         <dt>
