--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayNameFor(m => m.Product.Id)
         </th>
         <th>
-            @Html.DisplayNameFor(m => m.Product.ShortDescription)
+            @Html.DisplayNameFor(m => m.Product.Description)
         </th>
         <th>
             @Html.DisplayNameFor(m => m.Quantity)
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(m => item.Product.Id)
             </td>
             <td>
-                @Html.DisplayFor(m => item.Product.ShortDescription)
+                @Html.DisplayFor(m => item.Product.Description)
             </td>
             <td>
                 @Html.DisplayFor(m => item.Quantity)
