--- a/PSS/PSS/Views/Products/Delete.cshtml
+++ b/PSS/PSS/Views/Products/Delete.cshtml
@@ -45,19 +45,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ShortDescription)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FullDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FullDescription)
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
