--- a/PSS/PSS/Views/Products/Details.cshtml
+++ b/PSS/PSS/Views/Products/Details.cshtml
@@ -13,19 +13,11 @@
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.DisplayNameFor(model => model.ShortDescription)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FullDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FullDescription)
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
