--- a/PSS/PSS/Views/Categories/Details.cshtml
+++ b/PSS/PSS/Views/Categories/Details.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Perishable)
+            @Html.DisplayNameFor(model => model.IsPerishable)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Perishable)
+            @Html.DisplayFor(model => model.IsPerishable)
         </dd>
     </dl>
 </div>
