Correção de bug na finalização de pedido

--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -29,7 +29,7 @@
                         </th>
 
                         <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.ShortDescription)
+                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Description)
                         </th>
 
                         <th>
@@ -49,7 +49,7 @@
                             </td>
 
                             <td>
-                                @Html.DisplayFor(modelItem => item.Product.ShortDescription)
+                                @Html.DisplayFor(modelItem => item.Product.Description)
                             </td>
 
                             <td>
