--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -1,6 +1,5 @@
 ﻿@model PSS.Models.PurchaseOrder
 @using PSS.Utils.Constants
-@using PSS.Models
 @using PSS.Utils
 
 @{
@@ -23,31 +22,9 @@
             <div class="panel-heading">@Html.DisplayNameFor(model => model.Items)</div>
             <div class="panel-body">
                 <table class="table">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Id)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Product.Description)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.Items.FirstOrDefault().Quantity)
-                        </th>
-
-                        <th>
-                            @Html.DisplayFor(model => Model.Items.FirstOrDefault().Product.Price)
-                        </th>
-                    </tr>
-
                     @foreach (var item in Global.Cart.Items)
                     {
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Product.Id)
-                            </td>
-
                             <td>
                                 @Html.DisplayFor(modelItem => item.Product.Description)
                             </td>
@@ -57,7 +34,7 @@
                             </td>
 
                             <td>
-                                @Html.DisplayFor(modelItem => item.Product.Price)
+                                @Html.DisplayFor(modelItem => item.Price)
                             </td>
                         </tr>
                     }
@@ -68,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => Global.Cart.TotalValue, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
             </div>
         </div>
