--- a/PSS/PSS/Views/Shared/_Layout.cshtml
+++ b/PSS/PSS/Views/Shared/_Layout.cshtml
@@ -25,23 +25,29 @@
             <div class="navbar-collapse collapse">
                 @if (Global.User != null)
                 {
-                    <ul id="Links" class="nav navbar-nav">
-
-                        <li>@Html.ActionLink("Usuários", "Index", "Users")</li>
-                      
-                        @if (Global.User.UserType.Id == (int)UserType.UserTypeEnum.Admin)
-                        {
-                            <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
-                            <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
+                <ul id="Links" class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pessoas...</span> <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Usuários", "Index", "Users")</li>
                             <li>@Html.ActionLink("Fornecedores", "Index", "Providers")</li>
                             <li>@Html.ActionLink("Fabricantes", "Index", "Manufacturers")</li>
-                            <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
-                        }
+                        </ul>
+                    </li>
 
-                        <li>@Html.ActionLink("Produtos", "Index", "Products")</li>
-                        <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
-                        <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
-                    </ul>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Produtos...</span> <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
+                            <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
+                            <li>@Html.ActionLink("Produtos", "Index", "Products")</li>
+                        </ul>
+                    </li>
+
+                    <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
+                    <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
+                    <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
+                </ul>
                 }
 
                 <div class="pull-right">
