--- a/PSS/PSS/Views/Shared/_Layout.cshtml
+++ b/PSS/PSS/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 {
                 <ul id="Links" class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pessoas...</span> <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pessoas</span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Usuários", "Index", "Users")</li>
                             <li>@Html.ActionLink("Fornecedores", "Index", "Providers")</li>
@@ -36,7 +36,7 @@
                     </li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Produtos...</span> <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Produtos</span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
                             <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
@@ -44,7 +44,14 @@
                         </ul>
                     </li>
 
-                    <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Localização</span> <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
+                            <li>@Html.ActionLink("Países", "Index", "Countries")</li>
+                        </ul>
+                    </li>
+
                     <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
                     <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
                 </ul>
