--- a/PSS/PSS/Views/Shared/_Layout.cshtml
+++ b/PSS/PSS/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Localização</span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
+                            <li>@Html.ActionLink("Estados", "Index", "States")</li>
                             <li>@Html.ActionLink("Países", "Index", "Countries")</li>
                         </ul>
                     </li>
