--- a/PSS/PSS/Views/States/Delete.cshtml
+++ b/PSS/PSS/Views/States/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model PSS.Models.Country
+﻿@model PSS.Models.State
 @using PSS.Utils.Constants
 
 @{
@@ -13,11 +13,27 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Country.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Country.Name)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.UF)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UF)
         </dd>
 
     </dl>
