--- a/PSS/PSS/Views/States/Index.cshtml
+++ b/PSS/PSS/Views/States/Index.cshtml
@@ -13,13 +13,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Country.Name)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UF)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Country)
         </th>
         <th></th>
     </tr>
@@ -28,13 +28,13 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.Name)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UF)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
                 @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
