Corrigido inserção do frete

--- a/PSS/PSS/Views/PurchaseOrders/Index.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Index.cshtml
@@ -13,10 +13,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.OrderStatus.Description)
+            @Html.DisplayNameFor(model => model.OrderStatus)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.User.Name)
+            @Html.DisplayNameFor(model => model.User)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.TotalPrice)
