--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -13,48 +13,79 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>@Html.DisplayNameForModel()</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h4>@Html.DisplayNameForModel()</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="panel panel-default">
-        <div class="panel-heading">@Html.DisplayNameFor(model => model.Items)</div>
-        <div class="panel-body">
-            <table class="table">
-                @foreach (var item in Global.Cart.Items)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Product.Description)
-                        </td>
+        <div class="panel panel-default">
+            <div class="panel-heading">@Html.DisplayNameFor(model => model.Items)</div>
+            <div class="panel-body">
+                <table class="table">
+                    @foreach (var item in Global.Cart.Items)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Product.Description)
+                            </td>
 
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Quantity)
-                        </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Quantity)
+                            </td>
 
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Price)
-                        </td>
-                    </tr>
-                }
-            </table>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Price)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </div>
-    </div>
 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalPrice)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => Global.Cart.TotalValue)
-        </dd>
-    </dl>
+        <div class="panel panel-default">
+            <div class="panel-heading">@Html.DisplayNameFor(model => model.Freight)</div>
+            <div class="panel-body">
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Freight.DeliveryDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Freight.DeliveryDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Freight.DeliveryDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Freight.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Freight.Price, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Freight.Price, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Freight.FreightTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("FreightTypeId", null, htmlAttributes: new { @class = "form-control" })                       
+                        @Html.ValidationMessageFor(model => model.Freight.FreightTypeId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.TotalPrice)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => Global.Cart.TotalValue)
+            </dd>
+        </dl>
 
         <div>
             <input type="submit" value="@View.Create" class="btn btn-default" />
         </div>
-</div>
+    </div>
 }
 
 <br />
