--- a/PSS/PSS/Views/PurchaseOrders/Details.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model PSS.Models.PurchaseOrder
+@using PSS.Utils.Constants
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = View.Details;
 }
 
-<h2>Details</h2>
+<h2>@View.Details</h2>
 
 <div>
-    <h4>PurchaseOrder</h4>
+    <h4>@Html.DisplayNameForModel()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,19 +20,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.User.Password)
+            @Html.DisplayNameFor(model => model.User.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.User.Password)
+            @Html.DisplayFor(model => model.User.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TotalPrice)
+            @Html.DisplayNameFor(model => model.User.LastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TotalPrice)
+            @Html.DisplayFor(model => model.User.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
 
         <dt>
@@ -42,6 +51,13 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalPrice)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalPrice)
+        </dd>
     </dl>
 </div>
 <p>
