Refatorado a classe "UserType" para enum

--- a/PSS/PSS/Views/Users/Delete.cshtml
+++ b/PSS/PSS/Views/Users/Delete.cshtml
@@ -73,7 +73,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserType.Description)
+            @Html.DisplayFor(model => model.UserType)
         </dd>
 
         <dt>
