--- a/PSS/PSS/Views/Users/Create.cshtml
+++ b/PSS/PSS/Views/Users/Create.cshtml
@@ -82,10 +82,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.UserTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.UserType, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("UserTypeId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.UserTypeId, "", new { @class = "text-danger" })
+                        @Html.EnumDropDownListFor(model => model.UserType, htmlAttributes: new { @class = "form-control"})
+                        @Html.ValidationMessageFor(model => model.UserType, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
