--- a/PSS/PSS/Views/Users/Details.cshtml
+++ b/PSS/PSS/Views/Users/Details.cshtml
@@ -72,7 +72,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserType.Description)
+            @Html.DisplayFor(model => model.UserType)
         </dd>
 
         <dt>
