Ajustes na view de pedido de compras

--- a/PSS/PSS/Views/PurchaseOrders/Index.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Index.cshtml
@@ -31,7 +31,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderStatus.Description)
+                @Html.DisplayFor(modelItem => item.OrderStatus)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.User.Name)
