--- a/PSS/PSS/Views/PurchaseOrders/Delete.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Delete.cshtml
@@ -1,30 +1,32 @@
 ﻿@model PSS.Models.PurchaseOrder
+@using PSS.Utils.Constants
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = View.Delete;
 }
 
-<h2>Delete</h2>
+<h2>@View.Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@View.ConfirmDelete</h3>
+
 <div>
-    <h4>PurchaseOrder</h4>
+    <h4>@Html.DisplayNameForModel()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.OrderStatus.Description)
+            @Html.DisplayNameFor(model => model.OrderStatus)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.OrderStatus.Description)
+            @Html.DisplayFor(model => model.OrderStatus)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.User.Password)
+            @Html.DisplayNameFor(model => model.User)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.User.Password)
+            @Html.DisplayFor(model => model.User.Name)
         </dd>
 
         <dt>
@@ -49,8 +51,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="@View.Delete" class="btn btn-default" /> |
+            @Html.ActionLink(View.BackToList, "Index")
         </div>
     }
 </div>
