--- a/PSS/PSS/Views/Cart/Details.cshtml
+++ b/PSS/PSS/Views/Cart/Details.cshtml
@@ -10,32 +10,84 @@
 <div>
     <h4>@Html.DisplayNameForModel()</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Product.Id)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Product.Id)
-        </dd>
+    <div class="panel panel-default">
+        <div class="panel-heading">Dados do item</div>
+        <div class="panel-body">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Description)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Product.Description)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Description)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Product.Description)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Quantity)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Quantity)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
 
-    </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+            </dl>
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">Dados do produto</div>
+        <div class="panel-body">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Description)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Description)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Category)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Category.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Unit)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Unit.Description)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Price)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Price)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Weight)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Weight)
+                </dd>
+            </dl>
+        </div>
+    </div>
 </div>
 
 <p>
