Chamado fábrica de controlador de pedido na hora de finalizar o pedido

--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>@View.Index</h2>
 
 <p>
-    @Html.ActionLink("Finalizar pedido", "Create", "PurchaseOrders")
+    @Html.ActionLink("Finalizar pedido", "Create", "Orders")
 </p>
 
 <table class="table">
