Populando dados no banco de dados

--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -14,7 +14,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(m => m.Product.Description)
+            @Html.DisplayNameFor(m => m.Product)
         </th>
         <th>
             @Html.DisplayNameFor(m => m.Product.Category)
