--- a/PSS/PSS/Views/Users/Index.cshtml
+++ b/PSS/PSS/Views/Users/Index.cshtml
@@ -1,12 +1,15 @@
 ﻿@model IEnumerable<PSS.Models.User>
 @using PSS.Utils.Constants
-@using PSS.Models
 
 @{
     ViewBag.Title = View.Index;
 }
 
 <h2>@View.Index</h2>
+
+<p>
+    @Html.ActionLink(View.Create, "Create")
+</p>
 
 <table class="table">
     <tr>
