--- a/PSS/PSS/Views/Units/Delete.cshtml
+++ b/PSS/PSS/Views/Units/Delete.cshtml
@@ -20,6 +20,13 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Abbreviation)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Abbreviation)
+        </dd>
     </dl>
 
     @using (Html.BeginForm())
