--- a/PSS/PSS/Views/Cart/Details.cshtml
+++ b/PSS/PSS/Views/Cart/Details.cshtml
@@ -16,11 +16,19 @@
         <div class="panel-body">
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.DisplayNameFor(model => model.Product.Description)
+                    @Html.DisplayNameFor(model => model.Product)
                 </dt>
 
                 <dd>
                     @Html.DisplayFor(model => model.Product.Description)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product.Unit)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Product.Unit.Description)
                 </dd>
 
                 <dt>
