--- a/PSS/PSS/Views/Units/Details.cshtml
+++ b/PSS/PSS/Views/Units/Details.cshtml
@@ -19,6 +19,13 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Abbreviation)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Abbreviation)
+        </dd>
     </dl>
 </div>
 <p>
