--- a/PSS/PSS/Views/Units/Index.cshtml
+++ b/PSS/PSS/Views/Units/Index.cshtml
@@ -15,6 +15,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Abbreviation)
+        </th>
         <th></th>
     </tr>
 
@@ -22,6 +25,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Abbreviation)
             </td>
             <td>
                 @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
