--- a/PSS/PSS/Views/Products/Index.cshtml
+++ b/PSS/PSS/Views/Products/Index.cshtml
@@ -47,7 +47,7 @@
             @Html.DisplayFor(modelItem => item.Category.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Unit.Description)
+            @Html.DisplayFor(modelItem => item.Unit.Abbreviation)
         </td>
         <td>
             @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
