Utilizado constantes nas views

--- a/PSS/PSS/Views/Manufacturers/Edit.cshtml
+++ b/PSS/PSS/Views/Manufacturers/Edit.cshtml
@@ -128,7 +128,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
