--- a/PSS/PSS/Views/States/Edit.cshtml
+++ b/PSS/PSS/Views/States/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PSS.Models.State
+@model PSS.Models.State
 @using PSS.Utils.Constants
 
 @{
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
