--- a/PSS/PSS/Views/Units/Details.cshtml
+++ b/PSS/PSS/Views/Units/Details.cshtml
@@ -30,6 +30,6 @@
 </div>
 <p>
     @Html.ActionLink(View.Delete, "Edit", new { id = Model.Id }) |
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 
 </p>
