--- a/PSS/PSS/Views/Users/Create.cshtml
+++ b/PSS/PSS/Views/Users/Create.cshtml
@@ -162,7 +162,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, Global.User == null ? "Login" : "Index")
+    @Html.ActionLink(View.BackToList, Global.User == null ? Actions.Login : Actions.BackToList)
 </div>
 
 @section Scripts {
