--- a/PSS/PSS/Views/Users/Delete.cshtml
+++ b/PSS/PSS/Views/Users/Delete.cshtml
@@ -130,7 +130,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="@View.Delete" class="btn btn-default" /> |
-            @Html.ActionLink(View.BackToList, "Index")
+            @Html.ActionLink(View.BackToList, Actions.BackToList)
         </div>
     }
 </div>
