--- a/PSS/PSS/Views/Users/Edit.cshtml
+++ b/PSS/PSS/Views/Users/Edit.cshtml
@@ -162,7 +162,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.Index)
 </div>
 
 @section Scripts {
