--- a/PSS/PSS/Views/Cart/Details.cshtml
+++ b/PSS/PSS/Views/Cart/Details.cshtml
@@ -99,6 +99,6 @@
 </div>
 
 <p>
-    @Html.ActionLink(View.Edit, "Edit", new { id = Model.Product.Id }) |
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.Edit, Actions.Edit, new { id = Model.Product.Id }) |
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </p>
