--- a/PSS/PSS/Views/Cart/Edit.cshtml
+++ b/PSS/PSS/Views/Cart/Edit.cshtml
@@ -43,7 +43,7 @@
 }
 
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
