--- a/PSS/PSS/Views/Cart/Index.cshtml
+++ b/PSS/PSS/Views/Cart/Index.cshtml
@@ -54,9 +54,9 @@
                 @Html.DisplayFor(m => item.Price)
             </td>
             <td>
-                @Html.ActionLink(View.Edit, "Edit", new { id = item.Product.Id }) |
-                @Html.ActionLink(View.Details, "Details", new { id = item.Product.Id }) |
-                @Html.ActionLink(View.Delete, "Delete", new { id = item.Product.Id })
+                @Html.ActionLink(View.Edit, Actions.Edit, new { id = item.Product.Id }) |
+                @Html.ActionLink(View.Details, Actions.Details, new { id = item.Product.Id }) |
+                @Html.ActionLink(View.Delete, Actions.Delete, new { id = item.Product.Id })
             </td>
         </tr>
     }
