--- a/PSS/PSS/Views/Products/Create.cshtml
+++ b/PSS/PSS/Views/Products/Create.cshtml
@@ -105,7 +105,7 @@
 }
 
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
