--- a/PSS/PSS/Views/Providers/Create.cshtml
+++ b/PSS/PSS/Views/Providers/Create.cshtml
@@ -128,7 +128,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
