--- a/PSS/PSS/Views/Providers/Edit.cshtml
+++ b/PSS/PSS/Views/Providers/Edit.cshtml
@@ -129,7 +129,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
