--- a/PSS/PSS/Views/SaleOrders/Create.cshtml
+++ b/PSS/PSS/Views/SaleOrders/Create.cshtml
@@ -90,7 +90,7 @@
 
 <br />
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.BackToList)
 </div>
 
 @section Scripts {
