--- a/PSS/PSS/Views/SaleOrders/Index.cshtml
+++ b/PSS/PSS/Views/SaleOrders/Index.cshtml
@@ -41,7 +41,7 @@
             </td>
             <td>
                 @Html.ActionLink(View.Cancel, "Cancel", new { id = item.Id }) |
-                @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
+                @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) |
                 @Html.ActionLink(View.Return, "Return", new { id = item.Id })
             </td>
         </tr>
