--- a/PSS/PSS/Views/Shared/Error.cshtml
+++ b/PSS/PSS/Views/Shared/Error.cshtml
@@ -10,7 +10,7 @@
 <body>
     <hgroup>
         <h1>@View.Error</h1>
-        <h2>@Global.Error.ToString()</h2>
+        <h2>Put error message here...</h2>
     </hgroup>
 </body>
 </html>
