--- a/PSS/PSS/Views/Units/Edit.cshtml
+++ b/PSS/PSS/Views/Units/Edit.cshtml
@@ -41,7 +41,7 @@
 }
 
 <div>
-    @Html.ActionLink(View.BackToList, "Index")
+    @Html.ActionLink(View.BackToList, Actions.Index)
 </div>
 
 @section Scripts {
