--- a/PSS/PSS/Views/Users/Index.cshtml
+++ b/PSS/PSS/Views/Users/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>@View.Index</h2>
 
 <p>
-    @Html.ActionLink(View.Create, "Create")
+    @Html.ActionLink(View.Delete, Actions.Create)
 </p>
 
 <table class="table">
@@ -60,16 +60,16 @@
             @if (item.Id == Global.User.Id)
             {
                 <td>
-                    @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
-                    @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
-                    @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
+                    @Html.ActionLink(View.Edit, Actions.Edit, new { id = item.Id }) |
+                    @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) |
+                    @Html.ActionLink(View.Delete, Actions.Delete, new { id = item.Id })
                 </td>
             }
             else
             {
                 <td>
                     <text>@View.Edit</text> |
-                    @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
+                    @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) |
                     <text>@View.Delete</text>
                 </td>
             }
