--- a/PSS/PSS/Views/Users/Login.cshtml
+++ b/PSS/PSS/Views/Users/Login.cshtml
@@ -36,7 +36,7 @@
             </div>
             <hr />
             <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Criar conta", "Create")
+                @Html.ActionLink(View.Create, Actions.Create)
             </div>
         </div>
     </div>
