Corrigido bug no layout

--- a/PSS/PSS/Views/Products/Index.cshtml
+++ b/PSS/PSS/Views/Products/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>@View.Index</h2>
 
 <p>
-    @Html.ActionLink(View.Delete, Actions.Create)
+    @Html.ActionLink(View.Create, Actions.Create)
 </p>
 <table class="table">
     <tr>
