--- a/PSS/PSS/Views/States/Index.cshtml
+++ b/PSS/PSS/Views/States/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>@View.Index</h2>
 
 <p>
-    @Html.ActionLink(View.Delete, Actions.Create)
+    @Html.ActionLink(View.Create, Actions.Create)
 </p>
 <table class="table">
     <tr>
